--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node src/index.js",
     "start:dev": "nodemon --legacy-watch src/index.js",
     "dev": "docker-compose -f docker-compose-development.yml up",
-    "dev:build": "docker-compose -f docker-compose-development.yml build",
+    "dev:build": "docker-compose -f docker-compose-development.yml build --no-cache",
     "dev:stop": "docker-compose -f docker-compose-development.yml stop"
   },
   "author": "Mehrdad",
@@ -25,7 +25,7 @@
     "mongoose": "^8.18.2",
     "morgan": "^1.10.1",
     "nodemailer": "^7.0.6",
-    "uuid": "^13.0.0",
+"uuid": "8.3.2",
     "validator": "^13.15.15"
   },
   "devDependencies": {
